kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: chatapp-frontend
          image: rajeshnaik2002/chatapp-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
